--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:resize_mode="fit"
-        app:rewind_increment="10000"
-        app:fastforward_increment="10000"
+        app:resize_mode="fill"
+        app:rewind_increment="5000"
+        app:fastforward_increment="5000"
         app:hide_on_touch="true"
         app:show_timeout="5000"
+        app:use_controller="true"
         android:background="@android:color/background_dark"
         app:player_layout_id="@layout/exo_player_view"
         app:layout_constraintBottom_toBottomOf="parent"
