--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -15,7 +15,7 @@
             app:fastforward_increment="5000"
             app:hide_on_touch="true"
             app:show_timeout="5000"
-            app:use_controller="true"
+            app:use_controller="false"
             android:background="@android:color/background_dark"
             app:player_layout_id="@layout/exo_player_view"
             app:layout_constraintBottom_toBottomOf="parent"
